fixes to fonts and text wrapping + switching to port 5003

--- a/app/static/styles.css
+++ b/app/static/styles.css
@@ -58,7 +58,7 @@
         background-color: rgb(30, 30, 30);
         color: whitesmoke;
         accent-color: #292929;
-        transform: translateY(-8%);
+        transform: translateY(-3%);
     }
 
     .container {
